--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "^4.10",
         "fakerphp/faker": "^1.23",
+        "knplabs/knp-paginator-bundle": "^6.4",
         "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
@@ -27,6 +28,7 @@
         "symfony/uid": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/yaml": "7.0.*",
+        "twig/extra-bundle": "^3.10",
         "twig/intl-extra": "^3.10",
         "twig/string-extra": "^3.10",
         "vich/uploader-bundle": "^2.4"
