--- a/.env
+++ b/.env
@@ -28,3 +28,7 @@ APP_SECRET=0b4f4f4d6c818f85d6d7713cd2ee5bdf
 DATABASE_URL="mysql://root:root@127.0.0.1:8889/MarieSHop?serverVersion=8.0.33&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://bb0cc45c91945e:103809a80a64bb@sandbox.smtp.mailtrap.io:2525
+###< symfony/mailer ###
