--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,13 @@
         "symfony/form": "7.0.*",
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-foundation": "7.0.*",
+        "symfony/mailer": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/translation": "7.0.*",
         "symfony/uid": "7.0.*",
         "symfony/validator": "7.0.*",
+        "symfony/webpack-encore-bundle": "^2.1",
         "symfony/yaml": "7.0.*",
         "twig/extra-bundle": "^3.10",
         "twig/intl-extra": "^3.10",
