--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,6 +43,7 @@ security:
   access_control:
     # - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/compte, roles: ROLE_USER }
+    - { path: ^/commande, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
   security:
