--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "easycorp/easyadmin-bundle": "^4.10",
         "fakerphp/faker": "^1.23",
         "knplabs/knp-paginator-bundle": "^6.4",
+        "mailjet/mailjet-apiv3-php": "^1.6",
+        "stripe/stripe-php": "^15.1",
         "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
