--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "fakerphp/faker": "^1.23",
         "knplabs/knp-paginator-bundle": "^6.4",
         "mailjet/mailjet-apiv3-php": "^1.6",
+        "scheb/2fa": "^7.5",
+        "scheb/2fa-email": "*",
+        "scheb/2fa-trusted-device": "*",
         "stripe/stripe-php": "^15.1",
         "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
@@ -25,6 +28,7 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/http-foundation": "7.0.*",
         "symfony/mailer": "7.0.*",
+        "symfony/rate-limiter": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/translation": "7.0.*",
