--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,7 +48,7 @@ security:
   # Easy way to control access for large sections of your site
   # Note: Only the *first* access control that matches will be used
   access_control:
-    # - { path: ^/admin, roles: ROLE_ADMIN }
+    - { path: ^/admin, roles: ROLE_ADMIN }
     - { path: ^/compte, roles: ROLE_USER }
     - { path: ^/commande, roles: IS_AUTHENTICATED_FULLY }
     - { path: ^/2fa, role: IS_AUTHENTICATED_2FA_IN_PROGRESS }
