--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "flip-toolkit": "^7.2.6",
+        "nouislider": "^15.8.1"
     }
 }
