--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "bootstrap": "^5.3.3",
         "flip-toolkit": "^7.2.6",
         "nouislider": "^15.8.1"
     }
